# rust_arrays_with_generic_index

./: Cargo.toml  README.md
src/: dynamic.rs  dynamicarray.rs  fixed.rs  lib.rs  makefile
